--- a/2324_GIA04_CA3_DescriptiveAnalytics_ENG.ipynb
+++ b/2324_GIA04_CA3_DescriptiveAnalytics_ENG.ipynb
@@ -675,13 +675,13 @@
    "id": "339906a0",
    "metadata": {},
    "source": [
-    "1) ANY and ANY_NAIXEMENT: There is a near-perfect positive correlation (0.99) between those.It is very expected as the years are directlycalculated from one another.\n",
-    "2) Academic Competences (PCAT, PCAST, PANG, PMAT, PMED): All of these scores are positively correlated with each other, ranging from moderate to high positive correlations (0.58 to 0.81). This suggests that students who score well in one academic area are likely to score well in others.\n",
-    "3) ANY and HABITAT_numeric: A moderate negative correlation of -0.38 suggests that there might be a connection between the year of evaluation and the grouping of municipalities by population. This could indicate changing demographics or policies affecting where students live over time.\n",
-    "4) Another obvious one is Average_Grade: There are strong positive correlations with the individual test scores (0.81 to 0.89), which is expected since the average grade is derived from these scores.\n",
-    "5) GENERE_numeric, NATURALESA_numeric, and HABITAT_numeric: These newly numeric variables show very low to no correlation with the academic scores and Average_Grade, indicating that gender, the nature of the student's center (public or private), and habitat type don't have strong linear relationships with academic performance as per this dataset.\n",
-    "6) ANY and PCAT, PCAST, PMAT: There are slight negative correlations ranging from -0.01 to -0.18, suggesting a very weak trend that as time goes by, students tensd to score lessin those subjects\n",
-    "7) PCAT and PCAST: The correlation of 0.79 indicates that students who do well in Catalan also tend to do well in Castellano.\n"
+    "- ANY and ANY_NAIXEMENT: There is a near-perfect positive correlation (0.99) between those.It is very expected as the years are directlycalculated from one another.\n",
+    "- Academic Competences (PCAT, PCAST, PANG, PMAT, PMED): All of these scores are positively correlated with each other, ranging from moderate to high positive correlations (0.58 to 0.81). This suggests that students who score well in one academic area are likely to score well in others.\n",
+    "- ANY and HABITAT_numeric: A moderate negative correlation of -0.38 suggests that there might be a connection between the year of evaluation and the grouping of municipalities by population. This could indicate changing demographics or policies affecting where students live over time.\n",
+    "- Another obvious one is Average_Grade: There are strong positive correlations with the individual test scores (0.81 to 0.89), which is expected since the average grade is derived from these scores.\n",
+    "- GENERE_numeric, NATURALESA_numeric, and HABITAT_numeric: These newly numeric variables show very low to no correlation with the academic scores and Average_Grade, indicating that gender, the nature of the student's center (public or private), and habitat type don't have strong linear relationships with academic performance as per this dataset.\n",
+    "- ANY and PCAT, PCAST, PMAT: There are slight negative correlations ranging from -0.01 to -0.18, suggesting a very weak trend that as time goes by, students tensd to score lessin those subjects\n",
+    "- PCAT and PCAST: The correlation of 0.79 indicates that students who do well in Catalan also tend to do well in Castellano.\n"
    ]
   },
   {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "61f8a083",
    "metadata": {},
    "outputs": [
@@ -756,10 +756,10 @@
     "General Observations: The scores vary by subject and year. There is no single trend that applies to all subjects throughout the period. But we can see the follwoing: \n",
     "\n",
     "- PCAST (Spanish): Scores in PCAST start strong, see a decline around 2019, and then generally increase again by 2022.\n",
-    "- PCAT (Catalan): PCAT scores display a slight decrease over time, with a more notable drop between 2021 and 2022.\n",
-    "- PANG (English): The average score for English sees significant fluctuations, with a sharp decline in 2020, a partial recovery in 2021, and then a steep rise in 2022. \n",
-    "- PMAT (Mathematics): Mathematics scores show the most consistent upward trend, improving almost every year, with a slight drop in 2021. \n",
-    "- PMED (Natural Environment Knowledge): Scores in PMED drop significantly after 2020 but then recover to their highest point in 2022. \n",
+    "- PCAT (Catalan): PCAT scores display a slight increase between 2018-2021, with a more notable drop between 2021 and 2022.\n",
+    "- PANG (English): The average score for English sees significant fluctuations, with a sharp decline in 2021, and then a steep rise in 2022. \n",
+    "- PMAT (Mathematics): Mathematics scores show the most consistent downward trend, dropping almost every year. \n",
+    "- PMED (Natural Environment Knowledge): Scores in PMED increase significantly after 2019 but then dropping a little bit in 2022. \n",
     "\n",
     "All of those could happen due to a range of factors, such as changes in teaching staff, teaching methods, or external factors such as the global pandemic which might have disrupted learning in 2020."
    ]
@@ -772,20 +772,6 @@
    },
    "source": [
     "## 6. Identification of student types (OPTIONAL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "y4nkCPd-8vo6",
-   "metadata": {
-    "id": "y4nkCPd-8vo6"
-   },
-   "source": [
-    "6\\.1. Apply the clustering algorithm k-means on the grades of the 5 subjects. Analyse the results obtained with different numbers of clusters and choose the grouping that you consider most appropriate. Justify the answer. <br>\n",
-    "\n",
-    "6\\.2. About the chosen solution, explain what type of student belongs to each cluster group. You can use boxplots or histograms discriminating by the cluster identifier (you will have to add the cluster assigned to each row to the student table). \n",
-    "To save the cluster assigned to each student in the data table, you can do (data is the dataframe that contains the students' data and kmeans the KMeans object):<br>\n",
-    "`dades['cluster'] = kmeans.labels_`"
    ]
   }
  ],
