--- a/2324_GIA04_CA3_DescriptiveAnalytics_ENG.ipynb
+++ b/2324_GIA04_CA3_DescriptiveAnalytics_ENG.ipynb
@@ -38,6 +38,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df8fab8d",
+   "metadata": {},
+   "source": [
+    "### Done by Olesya Kuzina (ICE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d29be35",
    "metadata": {},
    "source": [
